--- a/NOBMain.xaml
+++ b/NOBMain.xaml
@@ -38,6 +38,8 @@
                 <CheckBox x:Name="StartCode" Content="啟動" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="55" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="200" Margin="0,1,0,0"/>
                 <CheckBox x:Name="VIPSP" Content="VIPSP" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="85" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="260" Margin="0,1,0,0"/>
                 <CheckBox x:Name="IGMouse" Content="忽略鍵鼠" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="88" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="350" Margin="0,1,0,0" ToolTip="讓遊戲視窗不受到 滑鼠控制!"/>
+                <TextBox x:Name="腳本Point" Height="22" TextWrapping="Wrap" Width="25" Text="0" FontSize="14" MaxLength="1" FontWeight="Bold" TextAlignment="Center" Margin="5,0,0,0" />
+
             </StackPanel>
         </Canvas>
         <TextBox x:Name="視窗狀態" HorizontalAlignment="Left" Height="69" Margin="420,5,0,0" TextWrapping="WrapWithOverflow" Text="" VerticalAlignment="Top" Width="200" MaxLines="2147483643" MaxLength="6" ScrollViewer.CanContentScroll="True" UseLayoutRounding="True" Visibility="Visible" IsReadOnly="True"/>
@@ -87,7 +89,7 @@
                         <CheckBox x:Name="CB_定位點" Content="定位點" Height="15" Width="63" HorizontalAlignment="Left" Canvas.Left="122" Canvas.Top="28" VerticalAlignment="Center" />
                     </WrapPanel>
 
-                        </Canvas>
+                </Canvas>
                 <TextBox x:Name="SMENU2" HorizontalAlignment="Left" Height="20" Margin="101,50,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="30" MaxLines="1" FontStyle="Normal" FontStretch="Medium" FontWeight="Bold" MaxLength="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="Visible" d:IsHidden="True"/>
             </Grid>
         </Expander>
