--- a/NOBMain.xaml
+++ b/NOBMain.xaml
@@ -37,7 +37,7 @@
                 <ComboBox Visibility="Visible" VerticalAlignment="Top" SelectionChanged="SelectMenu_SelectionChanged" x:Name="SelectMenu" Height="20" Canvas.Left="5" Canvas.Top="0" Width="180" Margin="5,0,5,0"/>
                 <CheckBox x:Name="StartCode" Content="啟動" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="55" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="200" Margin="0,1,0,0"/>
                 <CheckBox x:Name="VIPSP" Content="VIPSP" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="85" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="260" Margin="0,1,0,0"/>
-                <CheckBox x:Name="IGMouse" Content="忽略鍵鼠" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="88" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="350" Margin="0,1,0,0" ToolTip="讓遊戲視窗不受到 滑鼠控制!"/>
+                <CheckBox x:Name="IGMouse" Content="忽略鍵鼠" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="88" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="350" Margin="0,1,0,0" ToolTip="讓遊戲視窗不受到 滑鼠控制!" IsEnabled="False"/>
                 <TextBox x:Name="腳本Point" Height="22" TextWrapping="Wrap" Width="25" Text="0" FontSize="14" MaxLength="1" FontWeight="Bold" TextAlignment="Center" Margin="5,0,0,0" />
 
             </StackPanel>
@@ -46,6 +46,12 @@
 
         <Expander x:Name="腳本展區"  Grid.ColumnSpan="4" Header="腳本進階設定區" Margin="5,110,5,0" VerticalAlignment="Top" Height="250">
             <Grid x:Name="ControlGrid" UseLayoutRounding="False" HorizontalAlignment="Left" VerticalAlignment="Top" Height="218" Width="552" IsEnabled="False" Margin="0,5,0,0">
+                <StackPanel x:Name="通用欄" HorizontalAlignment="Left">
+                    <DockPanel>
+                        <Label Content="延遲時間"/>
+                        <TextBox x:Name="延遲係數" TextWrapping="Wrap" Text="0" Width="100" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                    </DockPanel>
+                </StackPanel>
                 <Canvas x:Name="武技設定頁面" d:IsHidden="True">
                     <StackPanel Orientation="Horizontal">
                         <TextBox x:Name="TB_選擇關卡" Height="20" TextWrapping="Wrap" Text="2" Width="30" MaxLines="1" MaxLength="2" ToolTip="1-上杉2-武田3-北條" Visibility="Visible" HorizontalAlignment="Left" Canvas.Left="10" Canvas.Top="30" VerticalAlignment="Top"/>
@@ -59,7 +65,7 @@
 
                 <TextBox x:Name="FNPCID" HorizontalAlignment="Left" Height="20" Margin="57,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="118" Visibility="Hidden" Grid.ColumnSpan="2"/>
                 <TextBox x:Name="SMENU1" HorizontalAlignment="Left" Height="20" Margin="71,50,0,0" TextWrapping="Wrap" Text="6" VerticalAlignment="Top" Width="30" MaxLines="1" FontStyle="Normal" FontStretch="Medium" FontWeight="Bold" MaxLength="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="Visible" d:IsHidden="True"/>
-                <CheckBox x:Name="CB_AllIn" Content="全邀請" Margin="79,122,0,0" VerticalAlignment="Top" Visibility="Hidden" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="56"/>
+                <CheckBox x:Name="CB_AllIn" Content="全邀請" Margin="79,122,0,0" VerticalAlignment="Top" Visibility="Hidden" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="56" d:IsHidden="True"/>
                 <Canvas x:Name="TargetViewPage" Visibility="Visible" HorizontalAlignment="Left" VerticalAlignment="Top">
                     <CheckBox x:Name="解無敵" Content="F5解無敵" Canvas.Left="55" Canvas.Top="140" HorizontalAlignment="Left" VerticalAlignment="Center" Width="74"/>
                     <CheckBox x:Name="CB_開打" Content="開打" Canvas.Left="0" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
